--- a/wishlist/travel_wishlist/templates/travel_wishlist/wishlist.html
+++ b/wishlist/travel_wishlist/templates/travel_wishlist/wishlist.html
@@ -1,32 +1,29 @@
-{% extends 'travel_wishlist/base.html' %}
-{% block content %}
-
 <h2>Travel Wishlist</h2>
 
 <form method="POST" action="{% url 'place_list' %}">
     {% csrf_token %}
     {{ new_place_form }}
-    <button id="add-new-place" type="submit">Add</button>
+    <button type="submit">Add</button>
 </form>
+
 
 {% for place in places %}
 
-    <div class="wishlist-place">
+<div>
+    {{ place.name}}
 
-        <span id="place-name-{{ place.pk }}" class="place-name">{{ place.name }}</span>
+    <form method="POST" action="{% url 'place_was_visited' place.pk%}">
+        {% csrf_token %}
+        <button>Visited!</button>
+    </form>
+    
 
-        <form class="visited-form" method="POST" action="{% url 'place_was_visited' place.pk %}">
-            {% csrf_token %}
-            <button id="visited-button-{{ place.pk }}" type="submit">Visited!</button>
-        </form>
-
-    </div>
+</div>
 
 {% empty %}
 
-    <p>You have no places in your wishlist</p>
+<p>You have no places in your wishlist.</p>
 
 {% endfor %}
 
-{% endblock %}
-
+<a href="{% url 'places_visited' %}">Places you've visited</a>
